--- a/rainloop/v/0.0.0/app/templates/Index.html
+++ b/rainloop/v/0.0.0/app/templates/Index.html
@@ -11,11 +11,7 @@
 		<!--[if lte IE 8]>
 			<meta http-equiv="refresh" content="0; URL=./?/BadBrowser" />
 		<![endif]-->
-		<script type="text/javascript" data-cfasync="false">
-			if (!window.navigator || !window.navigator.cookieEnabled) {
-				window.document.location.replace('./?/NoCookie');
-			}
-		</script>
+
 		<meta name="Author" content="RainLoop Team" />
 		<meta name="robots" content="noindex,nofollow,noodp" />
 		<meta name="google" content="notranslate" />
@@ -24,23 +20,13 @@
 		{{BaseAppFaviconPngLinkTag}}{{BaseAppFaviconTouchLinkTag}}
 		<link type="text/css" rel="stylesheet" href="{{BaseAppMainCssLink}}" />
 		<link type="text/css" rel="stylesheet" id="rlThemeLink" />
-		<script type="text/javascript" data-cfasync="false" src="{{BaseAppBootScriptLink}}"></script>
-		<script type="text/javascript" data-cfasync="false">
-			__includeScr('{{BaseAppDataScriptLink}}' + (window.__rlah ? window.__rlah() || '0' : '0') + '/' +  window.Math.random().toString().substr(2) + '/');
-		</script>
-		<script type="text/javascript" data-cfasync="false">
-			if (window.rainloopAppData && window.rainloopAppData['NewThemeLink']) {
-				window.document.getElementById('rlThemeLink').href = window.rainloopAppData['NewThemeLink'];
-			}
-		</script>
-		<script type="text/javascript" data-cfasync="false">
-			if (window.rainloopAppData && window.rainloopAppData['IncludeCss']) {
-				__includeStyle(window.rainloopAppData['IncludeCss']);
-			}
-		</script>
-		<script type="text/javascript" data-cfasync="false"></script>
 	</head>
-	<body>
+	<body
+		data-data-script="{{BaseAppDataScriptLink}}"
+		data-editor-script="{{BaseAppEditorScriptLink}}"
+		data-libs-script="{{BaseAppLibsScriptLink}}"
+		data-main-script="{{BaseAppMainScriptLink}}"
+		data-user="{{USER}}">
 		<div id="rl-check"></div>
 		<div id="rl-bg" class="thm-body"></div>
 		<div id="rl-loading" class="thm-loading">
@@ -51,23 +37,6 @@
 				<div class="e-bounce bounce3"></div>
 			</div>
 		</div>
-		<script type="text/javascript" data-cfasync="false">
-			(function (window) {
-				var
-					oE = window.document.getElementById('rl-loading'),
-					oElDesc = window.document.getElementById('rl-loading-desc')
-				;
-				if (oElDesc && window.rainloopAppData['LoadingDescriptionEsc']) {
-					oElDesc.innerHTML = window.rainloopAppData['LoadingDescriptionEsc'];
-				}
-				if (oE && oE.style) {
-					oE.style.opacity = 0;
-					window.setTimeout(function () {
-						oE.style.opacity = 1;
-					}, 300);
-				}
-			}(window));
-		</script>
 		<div id="rl-loading-error" class="thm-loading">
 			An Error occurred,
 			<br />
@@ -85,72 +54,8 @@
 		</div>
 		<div id="rl-templates"></div>
 		<div id="rl-hidden"></div>
-		<script type="text/javascript" data-cfasync="false">
-
-			if (window.$LAB && window.rainloopAppData && window.rainloopAppData['TemplatesLink'] && window.rainloopAppData['LangLink'])
-			{
-				window.rainloopProgressJs = progressJs();
-
-				window.rainloopProgressJs.setOptions({'theme': 'rainloop'});
-				window.rainloopProgressJs.start().set(5);
-
-				window.$LAB
-					.script(function () {
-						return [
-							{'src': '{{BaseAppLibsScriptLink}}', 'type': 'text/javascript', 'charset': 'utf-8'}
-						];
-					})
-					.wait(function () {
-
-						window.rainloopProgressJs.set(20);
-
-						if (window.rainloopAppData['IncludeBackground']) {
-							$('#rl-bg').attr('style', 'background-image: none !important;').backstretch(
-								window.rainloopAppData['IncludeBackground'].replace('{{USER}}',
-									(window.__rlah ? window.__rlah() || '0' : '0')), {
-								'fade': 100, 'centeredX': true, 'centeredY': true
-							}).removeAttr('style');
-						}
-					})
-					.script(function () {
-						return [
-							{'src': window.rainloopAppData['TemplatesLink'], 'type': 'text/javascript', 'charset': 'utf-8'},
-							{'src': window.rainloopAppData['LangLink'], 'type': 'text/javascript', 'charset': 'utf-8'}
-						];
-					})
-					.wait(function () {
-						window.rainloopProgressJs.set(30);
-					})
-					.script(function () {
-						return {'src': '{{BaseAppMainScriptLink}}', 'type': 'text/javascript', 'charset': 'utf-8'};
-					})
-					.wait(function () {
-						window.rainloopProgressJs.set(50);
-					})
-					.script(function () {
-						return window.rainloopAppData['PluginsLink'] ?
-							{'src': window.rainloopAppData['PluginsLink'], 'type': 'text/javascript', 'charset': 'utf-8'} : null;
-					})
-					.wait(function () {
-						window.rainloopProgressJs.set(70);
-						__runBoot(false);
-					})
-					.script(function () {
-						return {'src': '{{BaseAppEditorScriptLink}}', 'type': 'text/javascript', 'charset': 'utf-8'};
-					})
-					.wait(function () {
-						if (window.CKEDITOR && window.__initEditor) {
-							window.__initEditor();
-							window.__initEditor = null;
-						}
-					})
-				;
-			}
-			else
-			{
-				__runBoot(true);
-			}
-
-		</script>
+		<script type="text/javascript" data-cfasync="false" src="{{BaseAppBootScriptLink}}"></script>
+		<script type="text/javascript" data-cfasync="false" src="/dev/blah1.js"></script>
+		<script type="text/javascript" data-cfasync="false" src="/dev/blah2.js"></script>
 	</body>
 </html>
